--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "fs": "next build && next start",
+    "bns": "next build && next start",
     "lint": "next lint"
   },
   "dependencies": {
